v0.1.9

    * Bugfixes

        *

    * New Features

        * Implemented GP for SR - plain vanilla GP for symbolic regression.
        * BPGP (and GP) can write matlab files for all BSFs found during the
          course of the run.

    *

v0.1.8

    * New Features

        * new situations in Gp callback
        * serialization of trees and FittedForestIndividual

    * bpgp runner refactored so all settings and params are passed through
      get_params()
    * bpgp runner converted to object for better extendability
    * BpgpRunner renamed to Runner
    * callback in Gp is now a class instead of callable


v0.1.7

    * Bugfixes

        * BentIdentity was incorrectly exported to matlab.

    * New features

        * Constants (leaf nodes) can be tuned via backpropagation using. This
          can be specified via a new switch --constants.

v0.1.6

    * New features

        * Added new --output-string-template placeholders: {tst_r2_inv},
          {tnr_r2_inv}, {tst_wae}, {trn_wae}.

    * Better formatting of --output-string-template option description in
      readme.

v0.1.5

    * New features

        * Added --output-string-template argument option.
        * Enabled no output directory (i.e. nothing will be output) by supplying
          "-" as the directory.

v0.1.4

    * Bugfixes

        * Derivative of Sinc could potentially result in division by zero in
          zero, where it is defined to be zero. This is now fixed.

    * New features

        * Added BentIdentity function (see description).

v0.1.3

    * New featues

        * Setup script defines entrypoint. That means that the package can be
          run directly, i.e. without the "python -m" thing.
        * Number of iterations and fitness evaluations for the found solution is
          reported in the summary file.
        * Used rng seed reported in the summary file.
        * Worst-case AE is reported in the summary file.
